clean code and refactored.